<resources>
    <string name="app_name">Com-Note</string>
    <string name="html_feature_coming_soon">Coming soon — HTML import</string>
    <string name="button_delete">Delete</string>
    <string name="button_continue">Continue</string>
    <string name="current_value_as_sentence">Current: %1$s.</string>
    <string name="frame_image_description">The image for this frame</string>
    <string name="frame_image_action_description">A visual representation of the current action with this frame</string>
    <string name="zero_length_audio">0:00.0</string>
    <string name="dropbox_download">Starting to download files from Dropbox</string>
    <string name="error_dropbox_download">Please choose the Dropbox folder which you want to download from before downloading</string>
    <string name="error_link_dropbox">Please link to your Dropbox</string>
    <string name="list_dropbox_folders">List all Dropbox folders, please wait…</string>
    <string name="download_finished">All files have been downloaded</string>
    <string name="background_task_progress">Please wait…</string>
    <string name="import_starting">Starting to process imported files…</string>
    <string name="import_file_confirmation">Import file</string>
    <string name="import_file_hint">Would you like to import the narrative %1$s?</string>
    <string name="import_not_now">Not now</string>
    <string name="import_file">Import</string>
    <string name="import_progress">Processing new narrative files…</string>
    <string name="import_finished">Successfully imported new narrative files</string>
    <string name="mov_export_mov_incompatible">This narrative contains audio that is incompatible with MOV files (currently M4A, MP3, AMR and WAV are supported). This audio will not be included in the video. Continue exporting?</string>
    <string name="mov_export_task_progress">Creating video file – this may take some time…</string>
    <string name="mov_export_run_in_background">Run in background</string>
    <string name="mov_export_task_complete">Video creation completed</string>
    <string name="error_loading_narrative_player">Error: couldn\'t open the narrative — please try again</string>
    <string name="export_narrative_title">Export this narrative</string>
    <string name="export_mov">&#x2191;&#160;&#160;&#160;&#160;Video (share, upload, YouTube)</string>
    <string name="export_html">&#x2191;&#160;&#160;&#160;&#160;HTML (create a webpage)</string>
    <string name="export_smil">&#x2191;&#x2193;&#160;&#160;SMIL (send to %1$ss)</string>
    <string name="export_narrative_failed">Error: failed to export the narrative — please try again</string>
    <string name="export_missing_directory">Error: unable to find a temporary directory – please ensure your device or SD card has free space available</string>
    <string name="export_potential_problem">Warning: No SD card found – on some devices this can cause export issues, and you may encounter problems playing the narrative</string>
    <string name="export_creation_failed">Error: couldn\'t create the files to export – please try again</string>
    <string name="export_narrative_name">Please enter a name for this narrative</string>
    <string name="export_narrative_name_exists">Error: that narrative already exists – please choose a different name</string>
    <string name="export_narrative_name_blank">Error: please enter a name</string>
    <string name="export_narrative_saved">The narrative has been saved to your SD card in the %1$s folder</string>
    <string name="select_template_hint">Select a template to load, or long-press for additional options</string>
    <string name="template_to_narrative_complete">The template has been loaded</string>
    <string name="delete_template_confirmation">Delete this template?</string>
    <string name="delete_template_hint">The template will be permanently deleted</string>
    <string name="delete_template_succeeded">The template has been deleted</string>
    <string name="template_actions">Template actions</string>
    <string name="export_template">Export this template</string>
    <string name="delete_template">Delete this template</string>
    <string name="export_template_failed">Error: failed to export the template — please try again</string>
    <string name="template_list_empty">No templates found\n\n\nTo make an existing narrative into a template, choose \"Make template\" from the frame editor or playback screen\'s options menu</string>
    <string name="error_loading_text_editor">Error loading text editor – please try again</string>
    <string name="delete_text_confirmation">Delete this text?</string>
    <string name="delete_text_hint">All the text on this frame will be permanently deleted</string>
    <string name="delete_text_succeeded">The text has been deleted</string>
    <string name="split_text_add_content">Please add text before creating a new frame</string>
    <string name="error_loading_image_editor">Error loading image editor – please try again</string>
    <string name="error_camera_failed">Error: there was a problem communicating with the camera — please try again</string>
    <string name="error_taking_picture_no_camera">Unable to take pictures (no camera detected) – opening gallery instead</string>
    <string name="retake_picture_hint">Tap the picture to re-take or import from your gallery</string>
    <string name="retake_picture_hint_no_camera">Tap the picture to replace from your gallery</string>
    <string name="focus_camera_hint">Tap the screen to focus the camera</string>
    <string name="camera_image_description">The image taken with the camera</string>
    <string name="save_picture_failed">Error: failed to save the picture — please try again</string>
    <string name="import_picture_failed">Error: failed to import the picture — please try again</string>
    <string name="import_picture_unavailable">Sorry, unable to import pictures on this device – no gallery found</string>
    <string name="delete_image_confirmation">Delete this image?</string>
    <string name="delete_image_hint">The image will be permanently deleted</string>
    <string name="delete_image_succeeded">The image has been deleted</string>
    <string name="split_image_add_content">Please add an image before creating a new frame</string>
    <string name="error_loading_audio_editor">Error loading sound editor – please try again</string>
    <string name="error_playing_audio">Error playing the sound – please try again</string>
    <string name="error_recording_audio">Error recording the sound – please try again</string>
    <string name="error_recording_audio_no_microphone">Unable to start recording (no microphone detected) – opening music library instead</string>
    <string name="retake_audio_hint_no_recording">Tap the player to replace from your music library</string>
    <string name="retake_audio_hint">Tap the player to add to the audio or import from your music library</string>
    <string name="audio_playback_icon_description">Audio playback icon</string>
    <string name="import_audio_failed">Error: failed to import the audio — please try again</string>
    <string name="import_audio_unavailable">Sorry, unable to import audio on this device – no music library found</string>
    <string name="delete_audio_confirmation">Delete this sound?</string>
    <string name="delete_audio_hint">The sound will be permanently deleted</string>
    <string name="delete_audio_succeeded">The sound has been deleted</string>
    <string name="split_audio_add_content">Please record audio before creating a new frame</string>
    <string name="retake_audio_forbidden">Sorry, this audio is in a format that cannot be edited. To replace it, please delete the current recording first</string>
    <string name="error_plugin_headphone">Please plug in your headphones</string>
    <string name="error_loading_frame_editor">Error loading frame editor – please try again</string>
    <string name="delete_frame_confirmation">Delete this frame?</string>
    <string name="delete_frame_hint">All the content in this frame will be permanently deleted</string>
    <string name="play_narrative_add_content">Please add media before starting playback</string>
    <string name="split_frame_add_content">Please add media before creating a new frame</string>
    <string name="make_template_hint">This narrative will now show in the list of templates when creating a new narrative</string>
    <string name="make_template_confirmation">Template complete</string>
    <string name="make_template_add_content">Please add media to this frame before creating a template</string>
    <string name="next_previous_no_more_frames">Swipe: there are no more frames in this narrative</string>
    <string name="delete_narrative_confirmation">Delete narrative?</string>
    <string name="delete_narrative_hint">The narrative this frame belongs to will be permanently deleted</string>
    <string name="delete_narrative_second_confirmation">Please confirm</string>
    <plurals name="delete_narrative_second_hint">
        <item quantity="one">The entire narrative (one frame) will be permanently deleted</item>
        <item quantity="other">The entire narrative (%1$d frames) will be permanently deleted</item>
    </plurals>
    <string name="delete_narrative_succeeded">The narrative has been deleted</string>
    <string name="error_opening_narrative_content_sd">Error: unable to find your narratives. Please check that the SD card is available</string>
    <string name="error_opening_narrative_content">Error: unable to find your narratives</string>
    <string name="error_no_image_to_print">Unfortunately, there is no image to print</string>
    <string name="narrative_list_header">My Narratives</string>
    <string name="template_list_header">Narrative Templates</string>
    <string name="new_narrative_icon">+</string>
    <string name="title_add">Add a new narrative</string>
    <string name="add_blank">Create a new blank narrative</string>
    <string name="add_template">Choose a narrative template</string>
    <string name="narrative_list_empty">Press the + button above to get started&#160;&#160;&#160;&#x21E7;</string>
    <string name="narrative_folder_not_found">Error: couldn\'t find the folder to import narratives from – please set the import directory in settings</string>
    <string name="narrative_import_not_found">No narratives found to import – all files from a SMIL export should be placed in the import directory selected in settings (currently %1$s)</string>
    <string name="error_link_to_dropbox">Link to Dropbox failed or was cancelled.</string>
    <string name="drop_link_done">The sharing folder has been created at Dropbox/Com-Note-Sharing.</string>
    <string name="helper_narrative_frame_1">Welcome to\n%1$s!\n\nLong press to play \n the helper narrative</string>
    <string name="helper_narrative_frame_2">Editing: add pictures, sounds or text</string>
    <string name="helper_narrative_frame_3">Playback: view or export your narrative</string>
    <string name="helper_narrative_frame_4">Enjoy!\n\nWe\'d love to hear how you get on – you can send feedback via \"%1$s\" in %2$s</string>
    <string name="title_frame_editor">Edit this frame</string>
    <string name="title_camera">Add a picture</string>
    <string name="title_audio">Add sounds</string>
    <string name="title_text">Add text</string>
    <string name="title_template_browser">Open a template</string>
    <string name="title_playback">Narrative playing</string>
    <string name="title_save_locally">Save to SD card</string>
    <string name="menu_new_narrative">New narrative</string>
    <string name="menu_dropbox_setup">Link to Dropbox account</string>
    <string name="choose_dropbox_folder">Choose Dropbox folder</string>
    <string name="menu_scan_imports_dropbox">Download via Dropbox</string>
    <string name="menu_scan_imports">Scan for new narrative</string>
</resources>